[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 65.3.0", # required by pyproject+setuptools_scm integration and editable installs
  "setuptools_scm[toml] >= 7.0.5" # required for "no-local-version" scheme
]

[dependency-groups]
dev = [
  "coverage>=7.6.9",
  "mkdocs-exclude>=1.0.2",
  "pytest>=8",
  "pytest-instafail>=0.5.0",
  "pytest-plus>=0.8.1"
]
docs = [
  "argparse-manpage>=4.7",
  "mkdocs-ansible>=24.12.0",
  "mkdocs-exclude>=1.0.2"
]
lint = ["pre-commit>=3.5.0", "pre-commit-uv>=4.1.4"]
pkg = [
  "build[virtualenv]",
  "twine"
]

[project]
description = "..."
dynamic = ["version"]
name = "team-devtools"
readme = "README.md"
# https://peps.python.org/pep-0621/#readme
requires-python = ">=3.10"

[tool.codespell]
ignore-words-list = ["SME"]

# Keep this default because xml/report do not know to use load it from config file:
# data_file = ".coverage"
[tool.coverage.paths]
source = ["src", "test", ".tox/*/site-packages"]

[tool.coverage.report]
exclude_also = ["pragma: no cover", "if TYPE_CHECKING:"]
# Increase it just so it would pass on any single-python run
fail_under = 100
omit = ["test/*"]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.run]
concurrency = ["multiprocessing", "thread"]
# Do not use branch until bug is fixes:
# https://github.com/nedbat/coveragepy/issues/605
# branch = true
parallel = true
source = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:pytest_cov --durations=10 --failed-first"
norecursedirs = [
  "*.egg",
  ".cache",
  ".config",
  ".eggs",
  ".git",
  ".github",
  ".mypy_cache",
  ".projects",
  ".eggs",
  ".tox",
  "__pycache__",
  "build",
  "collections",
  "dist",
  "docs",
  "site",
  "src/*.egg-info"
]

[tool.setuptools_scm]
# To prevent accidental pick of mobile version tags such 'v6'
git_describe_command = [
  "git",
  "describe",
  "--dirty",
  "--long",
  "--tags",
  "--match",
  "v*.*"
]
local_scheme = "no-local-version"
tag_regex = "^(?P<prefix>v)?(?P<version>[0-9.]+)(?P<suffix>.*)?$"
write_to = "src/team_devtools/_version.py"

[tool.tomlsort]
in_place = true
sort_inline_tables = true
sort_table_keys = true

[tool.tox]
env_list = [
  "lint",
  "pkg",
  "py",
  "docs",
  "devel"
]
isolated_build = true
min_version = "4.28.4"
requires = [
  "tox>=4.28.4",
  "tox-extra >= 2.0.1",
  "tox-uv >= 1.28.0",
  "setuptools >= 65.3.0" # editable installs
]

[tool.tox.env.devel]
commands = [
  [
    "sh",
    "-c",
    "uv pip list -q --format=freeze | tr '\\n' ','"
  ],
  {extend = true, of = ["tool", "tox", "env_run_base", "commands"], replace = "ref"},
  [
    "git",
    "restore",
    "uv.lock"
  ]
]
description = "Run the tests with newest dependencies (no lock and allowing prereleases)"
runner = "uv-venv-lock-runner"
uv_sync_flags = ["--upgrade", "--prerelease=allow"]
uv_sync_locked = false

[tool.tox.env.docs]
commands = [
  ["{env_python}", "-m", "mkdocs", {default = ["build", "--strict", "--site-dir=_readthedocs/html/"], extend = true, replace = "posargs"}]
]
description = "Builds docs"
groups = ["docs"]
skip_install = false

[tool.tox.env.lint]
commands = [
  ["pre-commit", "run", "--all-files", "--show-diff-on-failure"]
]
dependency_groups = ["lint"]
description = "Run all linters"
pass_env = [
  "HOMEPATH",
  "PROGRAMDATA",
  "RUFF_OUTPUT_FORMAT"
]
runner = "uv-venv-runner"
skip_install = true

[tool.tox.env.pkg]
commands = [
  ["rm", "-rf", "{tox_root}/dist/"],
  ["python", "-m", "build", "--outdir", "{tox_root}/dist/", "{tox_root}"],
  ["sh", "-c", "python -m twine check --strict {tox_root}/dist/*"]
]
description = "Build package and check metadata"
group = "pkg"

[tool.tox.env_run_base]
allowlist_externals = ["rm", "sh"]
commands = [
  ["python", "-m", "coverage", "run", "-m", "pytest", {default = ["-ra", "--showlocals", "--doctest-modules", "--durations=10", "--junitxml=./junit.xml"], extend = true, replace = "posargs"}],
  ["sh", "-xec", "coverage combine -a -q --data-file={env_dir}/.coverage {work_dir}/*/.coverage.* && coverage report --data-file={env_dir}/.coverage && coverage xml --data-file={env_dir}/.coverage -o {env_dir}/coverage.xml"]
]
commands_pre = [
  ["sh", "-c", "rm -f {env_dir}/.coverage.* 2>/dev/null || true"]
]
package = "editable"
pass_env = [
  "CURL_CA_BUNDLE", # https proxies, https://github.com/tox-dev/tox/issues/1437
  "FORCE_COLOR",
  "HOME",
  "LANG",
  "LC_*",
  "NO_COLOR",
  "PYTEST_*", # allows developer to define their own preferences
  "PYTEST_REQPASS", # needed for CI
  "PYTHON*", # PYTHONPYCACHEPREFIX, PYTHONIOENCODING, PYTHONBREAKPOINT,...
  "PY_COLORS",
  "RTD_TOKEN",
  "REQUESTS_CA_BUNDLE", # https proxies
  "SETUPTOOLS_SCM_DEBUG",
  "SSL_CERT_FILE", # https proxies
  "SSH_AUTH_SOCK", # may be needed by git
  "UV_*"
]
runner = "uv-venv-lock-runner"

[tool.tox.env_run_base.set_env]
COVERAGE_FILE = "{env:COVERAGE_FILE:{env_dir}/.coverage.{env_name}}"
COVERAGE_PROCESS_START = "{tox_root}/pyproject.toml"
# see https://github.com/tox-dev/tox/issues/2092#issuecomment-2538729079
# see https://github.com/Kozea/CairoSVG/issues/392#issuecomment-2538707712
DYLD_FALLBACK_LIBRARY_PATH = "/opt/homebrew/lib:{env:DYLD_FALLBACK_LIBRARY_PATH}"

[tool.uv]
default-groups = ["dev", "docs", "lint", "pkg"]
package = true
